# crow_template_project

./: CMakeLists.txt  README.md
cmake/: config.cmake
crow_template_project/: CMakeLists.txt
crow_template_project/src/: main.cpp
res/: config.h.in
static/: bulma.css
templates/: index.html
